kubernetes/weewx/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: weewx
    app.kubernetes.io/name: weewx
  name: weewx
