kubernetes/weewx/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: weewx
    app.kubernetes.io/name: weewx
  name: weewx
  namespace: weewx
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: weewx
      app.kubernetes.io/name: weewx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: weewx
        app.kubernetes.io/name: weewx
    spec:
      securityContext:
        runAsNonRoot: true
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: weewx
          image: ghcr.io/felddy/weewx:5.4.0
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /data
              name: weewx-data
        - name: web
          image: nginxinc/nginx-unprivileged:1.31-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data
              name: weewx-data
            - mountPath: /etc/nginx/conf.d/default.conf
              name: nginx-config
              subPath: default.conf
      volumes:
        - name: weewx-data
          persistentVolumeClaim:
            claimName: weewx-data
        - name: nginx-config
          configMap:
            name: weewx-nginx-config
