kubernetes/weewx/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: weewx
    app.kubernetes.io/name: weewx
  name: weewx
  namespace: weewx
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: weewx
    app.kubernetes.io/name: weewx
  type: ClusterIP
