kubernetes/weewx/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: weewx
    app.kubernetes.io/name: weewx
  name: weewx
  namespace: weewx
spec:
  host: weewx.apps.okd.claffey.cloud
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: weewx
    weight: 100
  wildcardPolicy: None
